--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
+    "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
@@ -36,4 +37,3 @@
     "typescript": "^5.5.4"
   }
 }
-
