--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^8.3.1",
     "@getbrevo/brevo": "^3.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
