--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.972.0",
     "@aws-sdk/s3-request-presigner": "^3.972.0",
-    "@google-cloud/documentai": "^7.0.0",
-    "@google-cloud/vision": "^4.0.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.3.1",
     "@getbrevo/brevo": "^3.0.1",
+    "@google-cloud/documentai": "^7.0.0",
+    "@google-cloud/video-intelligence": "^5.3.0",
+    "@google-cloud/vision": "^4.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
