--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@google-cloud/documentai": "^7.0.0",
     "@google-cloud/video-intelligence": "^5.3.0",
     "@google-cloud/vision": "^4.0.0",
+    "@google/genai": "^1.39.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
