--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
+    "sharp": "^0.33.5",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
